base/backend-network-policy.yaml
# # base/backend-network-policy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: backend-network-policy
#   namespace: networkns  # Change this to the appropriate namespace if needed
# spec:
#   podSelector:
#     matchLabels:
#       app: backend  # Applies this policy to backend-app pods
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#     - from:
#         - podSelector:
#             matchLabels:
#               app: frontend  # Allows traffic only from frontend-app pods
#       ports:
#         - protocol: TCP
#           port: 80  # Allows HTTP traffic on port 80
#   egress:
#     - to:
#         - podSelector:
#             matchLabels:
#               app: frontend  # Allows outgoing traffic to frontend-app pods
#       ports:
#         - protocol: TCP
#           port: 80

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: networkns
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - ipBlock:
            cidr: 0.0.0.0/0  # Allow traffic from any IP
      ports:
        - protocol: TCP
          port: 80
