base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
  policyTypes:
    - Ingress
    - Egress
